; ModuleID = '/home/carl/AnghaBench/jemalloc/test/unit/extr_emitter.c_emit_json_nested_array.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/unit/extr_emitter.c_emit_json_nested_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@emitter_type_int = common dso_local global i32 0, align 4
@emitter_type_string = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @emit_json_nested_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_json_nested_array(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  store i32 123, i32* %3, align 4
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @emitter_begin(i32* %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @emitter_json_array_begin(i32* %7)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @emitter_json_array_begin(i32* %9)
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* @emitter_type_int, align 4
  %13 = call i32 (i32*, i32, ...) @emitter_json_value(i32* %11, i32 %12, i32* %3)
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @emitter_type_string, align 4
  %16 = call i32 (i32*, i32, ...) @emitter_json_value(i32* %14, i32 %15, i8** %4)
  %17 = load i32*, i32** %2, align 8
  %18 = load i32, i32* @emitter_type_int, align 4
  %19 = call i32 (i32*, i32, ...) @emitter_json_value(i32* %17, i32 %18, i32* %3)
  %20 = load i32*, i32** %2, align 8
  %21 = load i32, i32* @emitter_type_string, align 4
  %22 = call i32 (i32*, i32, ...) @emitter_json_value(i32* %20, i32 %21, i8** %4)
  %23 = load i32*, i32** %2, align 8
  %24 = call i32 @emitter_json_array_end(i32* %23)
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @emitter_json_array_begin(i32* %25)
  %27 = load i32*, i32** %2, align 8
  %28 = load i32, i32* @emitter_type_int, align 4
  %29 = call i32 (i32*, i32, ...) @emitter_json_value(i32* %27, i32 %28, i32* %3)
  %30 = load i32*, i32** %2, align 8
  %31 = call i32 @emitter_json_array_end(i32* %30)
  %32 = load i32*, i32** %2, align 8
  %33 = call i32 @emitter_json_array_begin(i32* %32)
  %34 = load i32*, i32** %2, align 8
  %35 = load i32, i32* @emitter_type_string, align 4
  %36 = call i32 (i32*, i32, ...) @emitter_json_value(i32* %34, i32 %35, i8** %4)
  %37 = load i32*, i32** %2, align 8
  %38 = load i32, i32* @emitter_type_int, align 4
  %39 = call i32 (i32*, i32, ...) @emitter_json_value(i32* %37, i32 %38, i32* %3)
  %40 = load i32*, i32** %2, align 8
  %41 = call i32 @emitter_json_array_end(i32* %40)
  %42 = load i32*, i32** %2, align 8
  %43 = call i32 @emitter_json_array_begin(i32* %42)
  %44 = load i32*, i32** %2, align 8
  %45 = call i32 @emitter_json_array_end(i32* %44)
  %46 = load i32*, i32** %2, align 8
  %47 = call i32 @emitter_json_array_end(i32* %46)
  %48 = load i32*, i32** %2, align 8
  %49 = call i32 @emitter_end(i32* %48)
  ret void
}

declare dso_local i32 @emitter_begin(i32*) #1

declare dso_local i32 @emitter_json_array_begin(i32*) #1

declare dso_local i32 @emitter_json_value(i32*, i32, ...) #1

declare dso_local i32 @emitter_json_array_end(i32*) #1

declare dso_local i32 @emitter_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
